// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dataset - as project 1`] = `
<div
  className="dataset"
>
  <span
    className="svg-icon "
    onClick={undefined}
  >
    <svg
      className="project-schema-icon"
      version="1.1"
      viewBox="0 0 16 16"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        className="fill"
        d="M15,0H1C0.4,0,0,0.4,0,1v14c0,0.6,0.4,1,1,1h14c0.6,0,1-0.4,1-1V1C16,0.4,15.6,0,15,0z M13.6,6.3l-2.3,3.5c-0.3,0.6-1.3,0.7-1.7,0.2L7,7.5l-2.7,3.6c-0.3,0.5-1.2,0.6-1.6,0.2C2.2,11,2.1,10.1,2.4,9.7L5.9,5c0.5-0.6,1.3-0.6,1.7-0.1l2.4,2.4L11.6,5c0.3-0.6,1-0.7,1.6-0.3C13.8,5,13.9,5.7,13.6,6.3z"
      />
    </svg>
  </span>
  <div
    className="center-info"
  >
    <div
      className="title"
    >
      This is a test
    </div>
    <div
      className="info"
    >
      @
      test
       · Updated 
      <span>
        Jul 20, 2017
      </span>
    </div>
  </div>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`renders dataset - button text 1`] = `
<div
  className="dataset"
>
  <span
    className="svg-icon "
    onClick={undefined}
  >
    <svg
      className="dataset-schema-icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="fill"
        d="M15,0H1C0.4,0,0,0.4,0,1v14c0,0.6,0.4,1,1,1h14c0.6,0,1-0.4,1-1V1C16,0.4,15.6,0,15,0z M8,13.5L2.2,9.9l1.5-1L8,11.5l4.3-2.7l1.5,0.9L8,13.5z M8,9.9L2.2,6.1L8,2.5l5.8,3.6L8,9.9z"
      />
    </svg>
  </span>
  <div
    className="center-info"
  >
    <div
      className="title"
    >
      This is a test
    </div>
    <div
      className="info"
    >
      @
      test
       · Updated 
      <span>
        Jul 20, 2017
      </span>
    </div>
  </div>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    test
  </button>
</div>
`;

exports[`renders dataset - button text, link 1`] = `
<div
  className="dataset"
>
  <span
    className="svg-icon "
    onClick={undefined}
  >
    <svg
      className="dataset-schema-icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="fill"
        d="M15,0H1C0.4,0,0,0.4,0,1v14c0,0.6,0.4,1,1,1h14c0.6,0,1-0.4,1-1V1C16,0.4,15.6,0,15,0z M8,13.5L2.2,9.9l1.5-1L8,11.5l4.3-2.7l1.5,0.9L8,13.5z M8,9.9L2.2,6.1L8,2.5l5.8,3.6L8,9.9z"
      />
    </svg>
  </span>
  <div
    className="center-info"
  >
    <div
      className="title"
    >
      This is a test
    </div>
    <div
      className="info"
    >
      @
      test
       · Updated 
      <span>
        Jul 20, 2017
      </span>
    </div>
  </div>
  <a
    className="btn btn-sm btn-default"
    href="https://data.world"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    test
  </a>
</div>
`;

exports[`renders dataset 1`] = `
<div
  className="dataset"
>
  <span
    className="svg-icon "
    onClick={undefined}
  >
    <svg
      className="dataset-schema-icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="fill"
        d="M15,0H1C0.4,0,0,0.4,0,1v14c0,0.6,0.4,1,1,1h14c0.6,0,1-0.4,1-1V1C16,0.4,15.6,0,15,0z M8,13.5L2.2,9.9l1.5-1L8,11.5l4.3-2.7l1.5,0.9L8,13.5z M8,9.9L2.2,6.1L8,2.5l5.8,3.6L8,9.9z"
      />
    </svg>
  </span>
  <div
    className="center-info"
  >
    <div
      className="title"
    >
      This is a test
    </div>
    <div
      className="info"
    >
      @
      test
       · Updated 
      <span>
        Jul 20, 2017
      </span>
    </div>
  </div>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</div>
`;
